preparied to hw0_3 -add convertMeal() -edit filteredByStreams() and filteredByCycles